# wzrd-ai

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENCY_ALTERNATIVE_ROADMAP.md  AGENCY_ALTERNATIVE_ROADMAP_V2.md  AI-Powered-Service-Funnel-Framework.docx  BUILD_ID  CURSOR-INSTRUCTIONS-complete.md  CURSOR-INSTRUCTIONS-final-all.md  CURSOR-INSTRUCTIONS-final.md  CURSOR-INSTRUCTIONS-mybrand.md  CURSOR-INSTRUCTIONS-pack3.md  CURSOR-INSTRUCTIONS-seo-smoke.md  CURSOR-INSTRUCTIONS.md  DEPLOYMENT-GUIDE-STEP-BY-STEP.docx  DEPLOYMENT.md  Dockerfile  EXECUTION_PLAN_10_OF_10.md  MANUS_INSTRUCTIONS.md  Makefile  PRE_LAUNCH_AUDIT.md  PRE_LAUNCH_EXECUTION_PLAN.md  Primo-Marca-Sales-Playbook-INTERNAL.docx  README.md  ROADMAP_CRITIQUE.md  ROADMAP_CRITIQUE_V2.md  ROADMAP_CRITIQUE_V3.md  ROADMAP_CRITIQUE_V4.md  SPRINT5_CURSOR_PROMPTS.md  SPRINT_4_DEPLOYMENT_RUNBOOK.md  SPRINT_5_MASTER_PLAN.md  SPRINT_5_MASTER_PLAN_V2.md  SPRINT_5_MASTER_PLAN_V3.md  TASK_1_RAG.md  TASK_2_CREDITS.md  TASK_2_CREDITS_V2.md  TASK_3_POSTHOG.md  TASK_3_POSTHOG_V2.md  TASK_4_DESIGN_HEALTH.md  (+23 more)
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_kb_tables.py  0003_escalation_tickets.py  0004_superadmin.py  0005_customer_profiles.py  0006_v2_features.py  0007_v3_analytics.py  0008_v4_features.py  0009_shopify_support.py  0010_add_outbound_calls_table.py
apps/api/radd/: alerts.py  config.py  deps.py  limiter.py  main.py
apps/api/radd/actions/: base.py  salla.py  salla_advanced.py  save_the_sale.py  shopify.py
apps/api/radd/admin/: router.py  (+11 more)
apps/api/scripts/: benchmark.py  create_superadmin.py  migrate_streams.py  preflight.py  run_e2e_smoke.sh  seed.py  seed_superadmin.py  setup_production.py  test_salla_e2e.py  test_shipping_webhook.py  verify_hybrid_search.py  whatsapp_simulator.py
apps/api/tests/: conftest.py  test_alerts.py  test_arabic.py  test_delayed_task_scheduler.py  test_entity_extractor.py  test_escalation.py  test_guardrails.py  test_knowledge.py  test_pipeline.py  test_salla.py  test_save_the_sale.py  test_security.py  test_v2_components.py  test_v2_features.py  test_webhook.py
apps/api/workers/: delayed_task_worker.py  kb_indexer.py  message_worker.py  message_worker_v2.py  outbound_call_worker.py  scheduler.py
(+655 files in other folders)
