[project]
name = "radd"
version = "0.1.0"
description = "Arabic-first customer service automation for Saudi e-commerce"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache / queue
    "redis[hiredis]>=5.2.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Config
    "pydantic-settings>=2.6.0",
    # HTTP client
    "httpx>=0.28.0",
    # OpenAI
    "openai>=1.57.0",
    "instructor>=1.0.0",
    # NLP — camel-tools removed (camel-kenlm build fails on arm64; using keyword-based NLP instead)
    "transformers>=4.0.0,<4.44.0",
    "torch>=2.5.0",
    # Utilities
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.5.1",
    "boto3>=1.34.0",
    "tokenizers>=0.20.0",
    "pydantic[email]>=2.12.5",
    "email-validator>=2.3.0",
    "apscheduler>=3.11.0",
    # Voice (COD Shield - Egypt)
    "twilio>=9.0.0",
]

[tool.uv]
override-dependencies = ["tokenizers>=0.20.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres,redis]>=4.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# افتراضياً بدون Docker: تشغيل الوحدة فقط. التكامل: uv run pytest tests/integration/ -v
addopts = ["-m", "not integration"]
markers = [
    "integration: marks tests as integration (require Docker via testcontainers)",
]
